--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/book-opened-svgrepo-com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="theme-color"
-      content="linear-gradient(to right, #646394, #1a2a31)"
-    />
+    <meta name="theme-color" content="linear-gradient(to right, #646394, #1a2a31)" />
 
     <link
       rel="stylesheet"
@@ -24,6 +21,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
